--- a/wtf.html
+++ b/wtf.html
@@ -19,8 +19,10 @@
                 <h2>Viikko 21</h2>
             </div>
             <div class="modal-body">
-                <div style="position:relative;height:0;padding-bottom:75.0%">
-                    <iframe src="https://www.youtube.com/embed/99VyAkLoI6c?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                <div class="wrapper">
+                    <div style="position:relative;height:0;padding-bottom:75.0%">
+                        <iframe src="https://www.youtube.com/embed/99VyAkLoI6c?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
@@ -39,7 +41,7 @@
                 <h2>Viikko 22</h2>
             </div>
             <div class="modal-body">
-                <img src="badboi.jpg">
+                <img class="image" src="badboi.jpg">
             </div>
             <div class="modal-footer">
             </div>
@@ -55,8 +57,11 @@
                 <h2>Viikko 23</h2>
             </div>
             <div class="modal-body">
-                <p><a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/finnish-sauna-festival-2017">Finnish Sauna Festival</a></p>
-
+                <h2>Finnish Sauna Festival</h2>
+                <p>Finnish Sauna Festival -tapahtuma perustuu saunoihin, suomalaiseen musiikkiin ja muotoiluun sekä korkealaatuiseen ja perinteiseen ruokamaailmaan. Festivaali järjestetään kesällä 2017 kolmessa Suomen kaupungissa; Helsingissä, Turussa ja Jyväskylässä. Jokaisen kaupungin tapahtumat ovat erilaisia; maantieteelliset sijainnit vaikuttavat niiden tarjontaan ja sisältöön. Helsingissä tapahtuma järjestetään Olympiastadionin edustalla, lähes ydinkeskustassa.
+                    <br>
+                    <br>
+                    <br> <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/finnish-sauna-festival-2017">Finnish Sauna Festival</a></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.566659079978!2d24.924557315573473!3d60.187904648928445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920a27b4785d43%3A0xaba6436db296f5cf!2sOlympiastadion!5e0!3m2!1sfi!2sfi!4v1494578664663" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="modal-footer">
@@ -93,7 +98,12 @@
                 <h2>Viikko 25</h2>
             </div>
             <div class="modal-body">
-                <p><a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/rock-the-beach-2017-foo-fighters">Rock The Beach 2017: Foo Fighters</a></p>
+                <h2>Rock The Beach</h2>
+                <p>Maailman suurimpiin rockbändeihin lukeutuva Foo Fighters saapuu ensi kesänä Suomeen osana Euroopan kiertuettaan. Foo Fighters esiintyy Helsingin viehättävällä Hietaniemen uimarannalla 19. kesäkuuta järjestettävässä Rock The Beach -tapahtumassa.
+                    <br> Luvassa on rockintäyteinen kesäpäivä tämän hetken kiinnostavimpien bändien parissa. Lämmittelijöinä nähdään skotlantilaistrio Biffy Clyro, brittiläis-yhdysvaltalainen The Kills ja suomalaissuuruus Apulanta. Tapahtuman lipunmyynti käynnistyy perjantaina 2. joulukuuta Ticketmasterissa.
+                    <br>
+                    <br>
+                    <br> <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/rock-the-beach-2017-foo-fighters">Rock The Beach 2017</a></p>
 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.4125515114276!2d24.903731515572773!3d60.173903450060614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920a394ed66e25%3A0x2fe742988abdcf51!2sHietarannan+uimaranta!5e0!3m2!1sfi!2sfi!4v1494579005633" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
@@ -111,9 +121,11 @@
                 <h2>Viikko 26</h2>
             </div>
             <div class="modal-body">
-                <p><a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/metallifestivaali-tuska-helsingissa#/?listing_id=52359&date_start[date]=28.4.2017&sorting=date_end;ASC&mode=list">Tuska Open Air Metal Festival</a></p>
-
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.660490518203!2d24.969058215573405!3d60.186351649054004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097c823f6a11%3A0x7c5f1298fef5c44!2sSuvilahti%2C+00101+Helsinki!5e0!3m2!1sfi!2sfi!4v1494579180571" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <h2>Tuska Open Air</h2>
+                <p>Tuska Open Air Metal Festival järjestetään Suvilahden kentällä Helsingissä 30.6.-2.7.2017.
+                    <br>
+                    <br>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.660490518203!2d24.969058215573405!3d60.186351649054004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097c823f6a11%3A0x7c5f1298fef5c44!2sSuvilahti%2C+00101+Helsinki!5e0!3m2!1sfi!2sfi!4v1494579180571" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="modal-footer">
 
@@ -129,8 +141,10 @@
                 <h2>Viikko 27</h2>
             </div>
             <div class="modal-body">
-                <div style="position:relative;height:0;padding-bottom:56.25%">
-                    <iframe src="https://www.youtube.com/embed/PMivT7MJ41M?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                <div class="wrapper">
+                    <div style="position:relative;height:0;padding-bottom:56.25%">
+                        <iframe src="https://www.youtube.com/embed/PMivT7MJ41M?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
@@ -147,8 +161,10 @@
                 <h2>Viikko 28</h2>
             </div>
             <div class="modal-body">
-                <div style="position:relative;height:0;padding-bottom:75.0%">
-                    <iframe src="https://www.youtube.com/embed/9f06QZCVUHg?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                <div class="wrapper">
+                    <div style="position:relative;height:0;padding-bottom:75.0%">
+                        <iframe src="https://www.youtube.com/embed/9f06QZCVUHg?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
@@ -165,7 +181,7 @@
                 <h2>Viikko 29</h2>
             </div>
             <div class="modal-body">
-                <img src="papunet.png">
+                <img class="image" src="papunet.png">
             </div>
             <div class="modal-footer">
 
@@ -181,8 +197,12 @@
                 <h2>Viikko 30</h2>
             </div>
             <div class="modal-body">
-                <p><a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/kaisafest-2017-mm-red-hot-chili-peppers">Kaisafest 2017</a></p>
-
+                <h2>Kaisafest</h2>
+                <p>Rock-maailman armoitetuimpiin ykkösnimiin lukeutuva Red Hot Chili Peppers saapuu konsertoimaan Helsinkiin heinäkuussa. Tämä yli 60 miljoonaa albumia ympäri maailman myynyt yhtye esiintyy Kaisafest 2017 -festivaalilla Kaisaniemen puistossa Helsingin keskustassa lauantaina 29. heinäkuuta.
+                    <br>
+                    <br>
+                    <br>
+                    <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/kaisafest-2017-mm-red-hot-chili-peppers">Kaisafest 2017</a></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.415457302835!2d24.942076215572772!3d60.17385535006449!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920bd2f6f5e5a7%3A0xa6ccbe9e7ab26216!2sKaisaniemen+puisto!5e0!3m2!1sfi!2sfi!4v1494579535808" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
             </div>
@@ -200,8 +220,11 @@
                 <h2>Viikko 31</h2>
             </div>
             <div class="modal-body">
-                <p><a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/weekend-festival-2017">Weekend Festival</a></p>
-
+                <h2>Weekend Festival</h2>
+                <p>Kuudetta kertaa 4.-5.8.2017 Helsingin Kyläsaaressa juhlittava Weekend Festival on jokaisena aiempana vuonna ollut loppuunmyyty. Popmaailman supertähti The Chainsmokers saapuu huipentamaan Weekend Festivalia 2017. The Chainsmokersin ohella Weekend Festivalin pääesiintyjiä ovat Armin van Buuren, Deadmau5, Clean Bandit ja Rae Sremmurd.
+                    <br>
+                    <br>
+                    <br> <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/weekend-festival-2017">Weekend Festival 2017</a></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1982.8709015442764!2d24.971696015574068!3d60.19941934799727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097430c43e43%3A0xbe6348b30be485e1!2sKyl%C3%A4saari%2C+00580+Helsinki!5e0!3m2!1sfi!2sfi!4v1494579658927" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
             </div>
@@ -219,8 +242,11 @@
                 <h2>Viikko 32</h2>
             </div>
             <div class="modal-body">
-                <p><a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/flow-festival-2017">Flow Festival</a></p>
-
+                <h2>Flow Festival</h2>
+                <p>Flow Festival järjestetään Helsingin Suvilahdessa 11.-13.8.2017. Flow esittelee musiikkia laajasti vanhan koulun legendoista ajankohtaisiin tulokkaisiin. Musiikin lisäksi festivaali panostaa visuaaliseen taiteeseen ja ravintolaelämyksiin. Vain lyhyen kävelymatkan päässä Helsingin keskustasta festivaali sykkii elämää ja imaisee kävijänsä ainutlaatuiseen Flow-tunnelmaan.
+                    <br>
+                    <br>
+                    <br><a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/flow-festival-2017">Flow Festival 2017</a></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.660490518203!2d24.969058215573405!3d60.186351649054004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097c823f6a11%3A0x7c5f1298fef5c44!2sSuvilahti%2C+00101+Helsinki!5e0!3m2!1sfi!2sfi!4v1494579764397" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="modal-footer">
@@ -237,8 +263,10 @@
                 <h2>Viikko 33</h2>
             </div>
             <div class="modal-body">
-                <div style="position:relative;height:0;padding-bottom:75.0%">
-                    <iframe src="https://www.youtube.com/embed/Kr0tTbTbmVA?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                <div class="wrapper">
+                    <div style="position:relative;height:0;padding-bottom:75.0%">
+                        <iframe src="https://www.youtube.com/embed/Kr0tTbTbmVA?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
@@ -284,8 +312,6 @@
     <p></p>
     <img src="duck.jpg" onclick="avaaLuukku(0)">
     <img src="goose.jpg" onclick="avaaLuukku(1)">
-
-
 
 </body>
 
