--- a/wtf.html
+++ b/wtf.html
@@ -61,7 +61,8 @@
                 <p>Finnish Sauna Festival -tapahtuma perustuu saunoihin, suomalaiseen musiikkiin ja muotoiluun sekä korkealaatuiseen ja perinteiseen ruokamaailmaan. Festivaali järjestetään kesällä 2017 kolmessa Suomen kaupungissa; Helsingissä, Turussa ja Jyväskylässä. Jokaisen kaupungin tapahtumat ovat erilaisia; maantieteelliset sijainnit vaikuttavat niiden tarjontaan ja sisältöön. Helsingissä tapahtuma järjestetään Olympiastadionin edustalla, lähes ydinkeskustassa.
                     <br>
                     <br>
-                    <br> <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/finnish-sauna-festival-2017">Finnish Sauna Festival</a></p>
+                    <br>
+                    <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/finnish-sauna-festival-2017">Finnish Sauna Festival</a></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.566659079978!2d24.924557315573473!3d60.187904648928445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920a27b4785d43%3A0xaba6436db296f5cf!2sOlympiastadion!5e0!3m2!1sfi!2sfi!4v1494578664663" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="modal-footer">
@@ -103,7 +104,8 @@
                     <br> Luvassa on rockintäyteinen kesäpäivä tämän hetken kiinnostavimpien bändien parissa. Lämmittelijöinä nähdään skotlantilaistrio Biffy Clyro, brittiläis-yhdysvaltalainen The Kills ja suomalaissuuruus Apulanta. Tapahtuman lipunmyynti käynnistyy perjantaina 2. joulukuuta Ticketmasterissa.
                     <br>
                     <br>
-                    <br> <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/rock-the-beach-2017-foo-fighters">Rock The Beach 2017</a></p>
+                    <br>
+                    <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/rock-the-beach-2017-foo-fighters">Rock The Beach 2017</a></p>
 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.4125515114276!2d24.903731515572773!3d60.173903450060614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920a394ed66e25%3A0x2fe742988abdcf51!2sHietarannan+uimaranta!5e0!3m2!1sfi!2sfi!4v1494579005633" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
@@ -123,6 +125,7 @@
             <div class="modal-body">
                 <h2>Tuska Open Air</h2>
                 <p>Tuska Open Air Metal Festival järjestetään Suvilahden kentällä Helsingissä 30.6.-2.7.2017.
+                    <br>
                     <br>
                     <br>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.660490518203!2d24.969058215573405!3d60.186351649054004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097c823f6a11%3A0x7c5f1298fef5c44!2sSuvilahti%2C+00101+Helsinki!5e0!3m2!1sfi!2sfi!4v1494579180571" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -224,7 +227,8 @@
                 <p>Kuudetta kertaa 4.-5.8.2017 Helsingin Kyläsaaressa juhlittava Weekend Festival on jokaisena aiempana vuonna ollut loppuunmyyty. Popmaailman supertähti The Chainsmokers saapuu huipentamaan Weekend Festivalia 2017. The Chainsmokersin ohella Weekend Festivalin pääesiintyjiä ovat Armin van Buuren, Deadmau5, Clean Bandit ja Rae Sremmurd.
                     <br>
                     <br>
-                    <br> <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/weekend-festival-2017">Weekend Festival 2017</a></p>
+                    <br>
+                    <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/weekend-festival-2017">Weekend Festival 2017</a></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1982.8709015442764!2d24.971696015574068!3d60.19941934799727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097430c43e43%3A0xbe6348b30be485e1!2sKyl%C3%A4saari%2C+00580+Helsinki!5e0!3m2!1sfi!2sfi!4v1494579658927" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
             </div>
@@ -246,7 +250,8 @@
                 <p>Flow Festival järjestetään Helsingin Suvilahdessa 11.-13.8.2017. Flow esittelee musiikkia laajasti vanhan koulun legendoista ajankohtaisiin tulokkaisiin. Musiikin lisäksi festivaali panostaa visuaaliseen taiteeseen ja ravintolaelämyksiin. Vain lyhyen kävelymatkan päässä Helsingin keskustasta festivaali sykkii elämää ja imaisee kävijänsä ainutlaatuiseen Flow-tunnelmaan.
                     <br>
                     <br>
-                    <br><a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/flow-festival-2017">Flow Festival 2017</a></p>
+                    <br>
+                    <a href="http://www.visithelsinki.fi/fi/juuri-nyt/tapahtumia/flow-festival-2017">Flow Festival 2017</a></p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.660490518203!2d24.969058215573405!3d60.186351649054004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4692097c823f6a11%3A0x7c5f1298fef5c44!2sSuvilahti%2C+00101+Helsinki!5e0!3m2!1sfi!2sfi!4v1494579764397" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="modal-footer">
