--- a/wtf.html
+++ b/wtf.html
@@ -314,9 +314,41 @@
         }
     </script>
 
-    <p></p>
-    <img src="duck.jpg" onclick="avaaLuukku(0)">
-    <img src="goose.jpg" onclick="avaaLuukku(1)">
+    <h1>Kesäkalenteri</h1>
+    <center>
+        <img class="kalenteri" src="vko22.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko23.png" onclick="avaaLuukku(1)">
+        <br>
+        <img class="kalenteri" src="vko24.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko25.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko26.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko26jatkuu.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko27.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko28.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko29.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko30.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko31eilinkkii.png">
+        <br>
+        <img class="kalenteri" src="vko31.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko32.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko33.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko3435eilinkkii.png">
+        <br>
+
+    </center>
+
 
 </body>
 
