--- a/wtf.html
+++ b/wtf.html
@@ -344,7 +344,9 @@
         <br>
         <img class="kalenteri" src="vko33.png" onclick="avaaLuukku(0)">
         <br>
-        <img class="kalenteri" src="vko3435eilinkkii.png">
+        <img class="kalenteri" src="vko34.png" onclick="avaaLuukku(0)">
+        <br>
+        <img class="kalenteri" src="vko35.png" onclick="avaaLuukku(0)">
         <br>
 
     </center>
