--- a/wtf.html
+++ b/wtf.html
@@ -346,7 +346,7 @@
         <br>
         <img class="kalenteri" src="vko34.png" onclick="avaaLuukku(0)">
         <br>
-        <img class="kalenteri" src="vko35.png">
+        <img class="kalenteri" src="vko35eilinkkii.png">
         <br>
 
     </center>
